#1209 fix broken styles

--- a/docs/css/fui-site.css
+++ b/docs/css/fui-site.css
@@ -8830,6 +8830,7 @@ hr {
     color: #5FA8EF !important;
     font-weight: normal;
     font-size: 20px;
+    margin-top: 10px;
     margin-bottom: 10px; }
     .docs-tiles .fd-tile__header:last-child {
       margin-bottom: 0; }
@@ -9323,7 +9324,7 @@ blockquote {
       text-decoration: none;
       box-shadow: none; }
 
-.docs-ui-kit .docs-header-h3 {
+.docs-ui-kit .docs-header-h3, .docs-ui-kit .docs-content h3, .docs-content .docs-ui-kit h3 {
   margin-top: 20px;
   text-transform: unset; }
 
@@ -9340,13 +9341,13 @@ blockquote {
     .docs-header-h1 {
       margin-bottom: 24px; } }
 
-.docs-header-h2 {
+.docs-header-h2, .docs-content h2 {
   font-size: 28px;
   font-weight: 100;
   line-height: 1.14;
   margin-top: 40px; }
 
-.docs-header-h3 {
+.docs-header-h3, .docs-content h3 {
   font-size: 16px;
   font-weight: bold;
   line-height: 1.88;
