--- a/docs/scss/_docs-general.scss
+++ b/docs/scss/_docs-general.scss
@@ -52,6 +52,7 @@ hr{
         color: $docs-tiles-color !important;
         font-weight: normal;
         font-size: 20px;
+        margin-top: 10px;
         margin-bottom: 10px;
         &:last-child {
           margin-bottom: 0;
