--- a/docs/scss/_docs-main-content.scss
+++ b/docs/scss/_docs-main-content.scss
@@ -18,6 +18,14 @@
     &>ul li {
         margin: 10px 0px 10px 0;
     }
+
+    h2{
+        @extend .docs-header-h2;
+    }
+
+    h3{
+        @extend .docs-header-h3;
+    }
     
 }
 .docs-content-full-width{
@@ -28,3 +36,5 @@
         padding-top: 20px;
     }
 }
+
+
